--- a/index.html
+++ b/index.html
@@ -2,106 +2,139 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Valentine?</title>
+  <title>Valentine 💖</title>
   <style>
     body {
-      height: 100vh;
       margin: 0;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #ff5f9e, #ffc371);
-      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      font-family: 'Comic Sans MS', cursive;
       overflow: hidden;
     }
-    .container {
+
+    .card {
+      background: white;
+      padding: 30px;
+      border-radius: 20px;
       text-align: center;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      position: relative;
       z-index: 2;
     }
+
     h1 {
-      color: white;
-      margin-bottom: 30px;
+      color: #ff3366;
     }
+
+    .buttons {
+      margin-top: 20px;
+      position: relative;
+      height: 80px;
+    }
+
     button {
+      border: none;
       padding: 15px 25px;
       font-size: 18px;
-      border: none;
       border-radius: 30px;
       cursor: pointer;
-      position: absolute;
+      transition: 0.3s;
     }
+
     #yes {
-      font-size: 26px;
-      padding: 22px 50px;
-      background-color: #ff1e56;
+      background: #ff3366;
       color: white;
-      position: static;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+      font-size: 22px;
+      padding: 18px 35px;
     }
+
     #no {
-      background-color: white;
-      color: #ff1e56;
+      background: #ccc;
+      color: black;
+      position: absolute;
+      left: 160px;
     }
+
+    .message {
+      display: none;
+      margin-top: 20px;
+      font-size: 22px;
+      color: #ff3366;
+    }
+
+    .from {
+      margin-top: 25px;
+      font-size: 14px;
+      color: #888;
+    }
+
     .heart {
       position: fixed;
       bottom: -20px;
-      font-size: 24px;
+      color: red;
+      font-size: 20px;
       animation: float 5s linear infinite;
     }
+
     @keyframes float {
       0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(-100vh); opacity: 0; }
+      100% { transform: translateY(-110vh); opacity: 0; }
     }
   </style>
 </head>
 <body>
 
 <audio autoplay loop>
-  <source src="https://cdn.pixabay.com/audio/2023/02/14/audio_5a1b5d9c07.mp3" type="audio/mpeg">
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
 </audio>
 
-<div class="container">
-  <h1>Satyam, will you be my Valentine? 💖</h1>
-  <button id="yes" onclick="yesClicked()">YES 😍</button>
-  <button id="no">NO 🙃</button>
+<div class="card">
+  <h1>Satyam 💘<br>Will you be my Valentine?</h1>
+
+  <div class="buttons">
+    <button id="yes" onclick="yesClicked()">YES 💖</button>
+    <button id="no" onmouseover="moveNo()">NO 😅</button>
+  </div>
+
+  <div class="message" id="msg">
+    YAYYYY 🥰❤️<br>
+    I knew you’d say YES!  
+  </div>
+
+  <div class="from">
+    — from Niyati 💕
+  </div>
 </div>
 
 <script>
-  const noBtn = document.getElementById("no");
-
-  noBtn.addEventListener("mouseover", () => {
-    const x = Math.random() * (window.innerWidth - 120);
-    const y = Math.random() * (window.innerHeight - 60);
-    noBtn.style.left = x + "px";
-    noBtn.style.top = y + "px";
-    noBtn.innerText = "Nice try 😜";
-  });
+  function moveNo() {
+    const no = document.getElementById("no");
+    const x = Math.random() * 200;
+    const y = Math.random() * 80;
+    no.style.left = x + "px";
+    no.style.top = y + "px";
+  }
 
   function yesClicked() {
-    document.body.innerHTML = `
-      <h1 style="color:white; text-align:center;">
-        YAYYY 💕<br><br>
-        Satyam & Niyati 💑<br>
-        Valentine locked forever 😘
-      </h1>
-    `;
-
-    // Hearts
-    setInterval(() => {
-      const heart = document.createElement("div");
-      heart.className = "heart";
-      heart.innerText = "💖";
-      heart.style.left = Math.random() * 100 + "vw";
-      document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 5000);
-    }, 300);
-
-    // WhatsApp redirect (after 2 sec)
-    setTimeout(() => {
-      window.location.href =
-        "https://wa.me/?text=I%20said%20YES%20💖%20Happy%20Valentine%20Niyati!";
-    }, 2000);
+    document.getElementById("msg").style.display = "block";
   }
+
+  // floating hearts
+  setInterval(() => {
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerHTML = "💖";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.fontSize = Math.random() * 20 + 15 + "px";
+    document.body.appendChild(heart);
+
+    setTimeout(() => {
+      heart.remove();
+    }, 5000);
+  }, 300);
 </script>
 
 </body>
