--- a/index.html
+++ b/index.html
@@ -1,141 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Valentine 💖</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      font-family: 'Comic Sans MS', cursive;
-      overflow: hidden;
-    }
-
-    .card {
-      background: white;
-      padding: 30px;
-      border-radius: 20px;
-      text-align: center;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      position: relative;
-      z-index: 2;
-    }
-
-    h1 {
-      color: #ff3366;
-    }
-
-    .buttons {
-      margin-top: 20px;
-      position: relative;
-      height: 80px;
-    }
-
-    button {
-      border: none;
-      padding: 15px 25px;
-      font-size: 18px;
-      border-radius: 30px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    #yes {
-      background: #ff3366;
-      color: white;
-      font-size: 22px;
-      padding: 18px 35px;
-    }
-
-    #no {
-      background: #ccc;
-      color: black;
-      position: absolute;
-      left: 160px;
-    }
-
-    .message {
-      display: none;
-      margin-top: 20px;
-      font-size: 22px;
-      color: #ff3366;
-    }
-
-    .from {
-      margin-top: 25px;
-      font-size: 14px;
-      color: #888;
-    }
-
-    .heart {
-      position: fixed;
-      bottom: -20px;
-      color: red;
-      font-size: 20px;
-      animation: float 5s linear infinite;
-    }
-
-    @keyframes float {
-      0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(-110vh); opacity: 0; }
-    }
-  </style>
-</head>
-<body>
-
-<audio autoplay loop>
-  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-</audio>
-
-<div class="card">
-  <h1>Satyam 💘<br>Will you be my Valentine?</h1>
-
-  <div class="buttons">
-    <button id="yes" onclick="yesClicked()">YES 💖</button>
-    <button id="no" onmouseover="moveNo()">NO 😅</button>
-  </div>
-
-  <div class="message" id="msg">
-    YAYYYY 🥰❤️<br>
-    I knew you’d say YES!  
-  </div>
-
-  <div class="from">
-    — from Niyati 💕
-  </div>
-</div>
-
 <script>
+  const noBtn = document.getElementById("no");
+  const yesBtn = document.getElementById("yes");
+  const message = document.getElementById("message");
+
   function moveNo() {
-    const no = document.getElementById("no");
-    const x = Math.random() * 200;
-    const y = Math.random() * 80;
-    no.style.left = x + "px";
-    no.style.top = y + "px";
+    const x = Math.random() * (window.innerWidth - 140);
+    const y = Math.random() * (window.innerHeight - 140);
+    noBtn.style.left = x + "px";
+    noBtn.style.top = y + "px";
+    message.innerHTML = "Oops 😏 trying to say NO? Not allowed 💕";
   }
 
-  function yesClicked() {
-    document.getElementById("msg").style.display = "block";
-  }
+  // NO always escapes
+  noBtn.addEventListener("mouseover", moveNo);
+  noBtn.addEventListener("touchstart", moveNo);
+  noBtn.addEventListener("click", (e) => {
+    e.preventDefault();
+    moveNo();
+  });
 
-  // floating hearts
-  setInterval(() => {
-    const heart = document.createElement("div");
-    heart.className = "heart";
-    heart.innerHTML = "💖";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.fontSize = Math.random() * 20 + 15 + "px";
-    document.body.appendChild(heart);
+  // YES click
+  yesBtn.addEventListener("click", () => {
+    message.innerHTML = "YAYYYY 😍💖 Now you owe me a date 😉";
+    confetti();
 
     setTimeout(() => {
-      heart.remove();
-    }, 5000);
-  }, 300);
-</script>
+      window.location.href =
+        "https://wa.me/?text=I%20said%20YES%20to%20you%20💕%20When%20is%20our%20date%20😉";
+    }, 1800);
+  });
 
-</body>
-</html>
+  function createHeart() {
+    const heart = document.createElement("div");
+    heart.classList.add("heart");
+    heart.innerHTML = "💖";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.fontSize = Math.random() * 22 + 14 + "px";
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 6000);
+  }
+
+  setInterval(createHeart, 300);
+
+  function confetti() {
+    for (let i = 0; i < 120; i++) {
+      const heart = document.createElement("div");
+      heart.innerHTML = "❤️";
+      heart.style.position = "absolute";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.top = Math.random() * 100 + "vh";
+      heart.style.fontSize = "22px";
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 2000);
+    }
+  }
+</script>
